<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pub_sub_cmd_vel</name>
  <version>0.0.0</version>
  <description>ROS2 package for publishing and subscribing to geometry_msgs/Twist (cmd_vel) messages. This package includes nodes for sending and receive velocity commands.</description>
  <maintainer email="zgz713912@gmail.com">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 编译和运行依赖 -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
